--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.3.3",
     "prisma": "^6.9.0",
+    "puppeteer": "^24.11.0",
     "sharp": "^0.34.2",
     "tailwindcss": "^4",
     "tsx": "^4.19.4",
