--- a/package.json
+++ b/package.json
@@ -10,23 +10,26 @@
     "prisma:deploy": "npx prisma migrate deploy && prisma generate"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^1.3.22",
     "@headlessui/react": "^2.2.4",
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^5.1.1",
     "@prisma/client": "^6.9.0",
     "@react-email/components": "^0.1.1",
+    "ai": "^4.3.16",
     "bcryptjs": "^3.0.2",
     "cloudinary": "^2.7.0",
     "date-fns": "^4.1.0",
     "next": "15.3.3",
     "next-auth": "^5.0.0-beta.28",
+    "openai": "^5.8.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.57.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "resend": "^4.6.0",
-    "zod": "^3.25.63"
+    "zod": "^3.25.67"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
