--- a/package.json
+++ b/package.json
@@ -7,19 +7,23 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "prisma:deploy": "npx prisma migrate deploy && prisma generate"
+    "prisma:deploy": "npx prisma migrate deploy && prisma generate",
+    "verify-mp": "node scripts/verify-production-credentials.js",
+    "test-mp": "npm run verify-mp"
   },
   "dependencies": {
     "@ai-sdk/openai": "^1.3.22",
     "@headlessui/react": "^2.2.4",
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^5.1.1",
+    "@mercadopago/sdk-react": "^1.0.3",
     "@prisma/client": "^6.9.0",
     "@react-email/components": "^0.1.1",
     "ai": "^4.3.16",
     "bcryptjs": "^3.0.2",
     "cloudinary": "^2.7.0",
     "date-fns": "^4.1.0",
+    "mercadopago": "^2.8.0",
     "next": "15.3.3",
     "next-auth": "^5.0.0-beta.28",
     "openai": "^5.8.2",
